--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>hw01-maven</module>
         <module>hw02-diyarraylist</module>
+        <module>hw05-own-test-framework</module>
     </modules>
     <name>homeworks</name>
 
@@ -22,6 +23,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <com.google.guava.version>28.1-jre</com.google.guava.version>
         <org.junit.jupiter.version>5.3.1</org.junit.jupiter.version>
+        <org.apache.maven.plugins>2.22.0</org.apache.maven.plugins>
+        <commons.cli.version>1.4</commons.cli.version>
     </properties>
 
     <dependencyManagement>
@@ -37,8 +40,26 @@
                 <version>${org.junit.jupiter.version}</version>
                 <scope>test</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${commons.cli.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <finalName>maven-unit-test</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${org.apache.maven.plugins}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
