--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>hw07-atm-department</module>
         <module>hw08-json-object-writer</module>
         <module>hw09-diy-orm</module>
+        <module>hw10-hibernate</module>
     </modules>
     <name>homeworks</name>
 
@@ -33,7 +34,7 @@
         <org.apache.maven.plugins.version>2.22.0</org.apache.maven.plugins.version>
         <org.mockito.version>1.9.5</org.mockito.version>
         <org.slf4j.version>1.7.29</org.slf4j.version>
-        <org.apache.logging.log4j.version>2.12.1</org.apache.logging.log4j.version>
+        <org.apache.logging.log4j.version>1.2.17</org.apache.logging.log4j.version>
         <gson.version>2.8.6</gson.version>
         <jsonassert.version>1.5.0</jsonassert.version>
         <maven-pmd-plugin.version>3.12.0</maven-pmd-plugin.version>
@@ -42,10 +43,19 @@
         <h2.database.version>1.4.197</h2.database.version>
         <logback.version>1.2.3</logback.version>
         <apache.commons.version>3.9</apache.commons.version>
+        <hibernate-core.version>5.4.4.Final</hibernate-core.version>
+        <assertj-core.version>3.13.2</assertj-core.version>
+        <mockito-core.version>2.28.2</mockito-core.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito-core.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -69,6 +79,18 @@
                 <version>${org.junit.jupiter.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-params</artifactId>
+                <version>${org.junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj-core.version}</version>
+                <scope>test</scope>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
             <dependency>
                 <groupId>commons-cli</groupId>
@@ -81,21 +103,9 @@
                 <version>${org.projectlombok.version}</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
-            <!--            <dependency>-->
-            <!--                <groupId>org.apache.logging.log4j</groupId>-->
-            <!--                <artifactId>log4j</artifactId>-->
-            <!--                <version>${org.apache.logging.log4j.version}</version>-->
-            <!--            </dependency>-->
-
             <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>${org.apache.logging.log4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
                 <version>${org.apache.logging.log4j.version}</version>
             </dependency>
             <dependency>
@@ -140,6 +150,11 @@
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -152,23 +167,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${org.apache.maven.plugins.version}</version>
             </plugin>
-            <!-- <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-pmd-plugin</artifactId>
-                 <version>${maven-pmd-plugin.version}</version>
-                 <configuration>
-                     <targetJdk>${maven.compiler.target}</targetJdk>
-                     <verbose>true</verbose>
-                 </configuration>
-                 <executions>
-                     <execution>
-                         <phase>package</phase>
-                         <goals>
-                             <goal>check</goal>
-                         </goals>
-                     </execution>
-                 </executions>
-             </plugin>-->
         </plugins>
     </build>
 
