--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>hw08-json-object-writer</module>
         <module>hw09-diy-orm</module>
         <module>hw10-hibernate</module>
+        <module>hw11-my-cache</module>
     </modules>
     <name>homeworks</name>
 
