--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>hw09-diy-orm</module>
         <module>hw10-hibernate</module>
         <module>hw11-my-cache</module>
+        <module>hw12-web-server</module>
     </modules>
     <name>homeworks</name>
 
@@ -48,10 +49,18 @@
         <assertj-core.version>3.13.2</assertj-core.version>
         <mockito-core.version>2.28.2</mockito-core.version>
         <jmh.version>1.21</jmh.version>
+        <jetty.version>9.4.22.v20191022</jetty.version>
+        <freemarker.version>2.3.28</freemarker.version>
+        <apache.httpclient.version>4.5.10</apache.httpclient.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${apache.httpclient.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-junit-jupiter</artifactId>
@@ -166,6 +175,29 @@
                 <groupId>org.openjdk.jmh</groupId>
                 <artifactId>jmh-generator-annprocess</artifactId>
                 <version>${jmh.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-webapp</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-security</artifactId>
+                <version>${jetty.version}</version>
             </dependency>
 
         </dependencies>
